# Singleton-example

./: CMakeLists.txt
include/: ModelCG.h  singleton.h
src/: main.cpp
